syntax = "proto3";

package bilibili.broadcast.message.main;

/** 弹幕消息数据 */
message DanmakuEvent {
    /** 弹幕列表 */
    repeated DanmakuElem elems = 1;
}

/** 弹幕实例 */
message DanmakuElem {
    /**
     * 弹幕id
     * @deprecated 精度丢失
     */
    int64 id = 1;
    /** 弹幕位置：/ms */
    int32 progress = 2;
    /**
     * 弹幕模式
     * | 1 | 4 | 5 | 6 | 7 | 8 | 9 |
     * | :-: | :-: | :-: | :-: | :-: | :-: | :-: |
     * | 普通 | 底部 | 顶部 | 逆向 | 高级 | 代码 | BAS |
     */
    int32 mode = 3;
    /** 弹幕字体 */
    int32 fontsize = 4;
    /** 弹幕颜色 */
    uint32 color = 5;
    /** 弹幕发送者crc32哈希 */
    string mid_hash = 6;
    /** 弹幕文本内容 */
    string content = 7;
    /** 弹幕发送时间  时间戳 */
    int64 ctime = 8;
    /** 弹幕动作 */
    optional string action = 9;
    /**
     * 弹幕池
     * | 0 | 1 | 2 |
     * | :-: | :-: | :-: |
     * | 普通弹幕 | 字幕弹幕 | 特殊弹幕 |
     */
    optional int32 pool = 10;
    /** 弹幕id字符串 */
    string id_str = 11;
}

/** 指令弹幕 */
message CommandDm {
    /** 弹幕id */
    int64 id = 1;
    /** oid */
    int64 oid = 2;
    /** mid */
    int64 mid = 3;

    int32 type = 4;
    /** 弹幕指令 */
    string command = 5;
    /** 弹幕内容 */
    string content = 6;
    /** 弹幕状态 */
    int32 state = 7;
    /** 弹幕位置：/ms */
    int32 progress = 8;
    /** 创建时间 */
    string ctime = 9;
    /** 修改时间 */
    string mtime = 10;
    /** 扩展json数据 */
    string extra = 11;
    /** 弹幕id_str */
    string idStr = 12;
}